--- a/Resources/config/orm-services.yml
+++ b/Resources/config/orm-services.yml
@@ -1,7 +1,12 @@
 services:
     phil_e_taylor_doctrine_encrypt.orm_subscriber:
         class: Philetaylor\DoctrineEncryptBundle\Subscribers\DoctrineEncryptSubscriber
-        arguments: ["@annotation_reader", "%phil_e_taylor_doctrine_encrypt.encryptor_class_name%", "%phil_e_taylor_doctrine_encrypt.keys%"]
+        arguments:
+            - "@annotation_reader"
+            - "%phil_e_taylor_doctrine_encrypt.encryptor_class_name%"
+            - "%phil_e_taylor_doctrine_encrypt.keys%"
+            - null
+            - "@snc_redis.cache"
         tags:
             -  { name: doctrine.event_subscriber }
 
@@ -11,8 +16,9 @@ services:
     phil_e_taylor_doctrine_encrypt.subscriber:
         alias: phil_e_taylor_doctrine_encrypt.orm_subscriber
 
-    phil_e_taylor_doctrine_encrypt.encryptor:
-        class: Philetaylor\DoctrineEncryptBundle\Services\Encryptor
-        arguments:
-            - "%phil_e_taylor_doctrine_encrypt.encryptor_class_name%"
-            - "%phil_e_taylor_doctrine_encrypt.keys%"
+#    phil_e_taylor_doctrine_encrypt.encryptor:
+#        class: Philetaylor\DoctrineEncryptBundle\Services\Encryptor
+#        arguments:
+#            - "%phil_e_taylor_doctrine_encrypt.encryptor_class_name%"
+#            - "%phil_e_taylor_doctrine_encrypt.keys%"
+#            - "@snc_redis.cache"
