--- a/Resources/config/orm-services.yml
+++ b/Resources/config/orm-services.yml
@@ -3,7 +3,8 @@ services:
         class: Philetaylor\DoctrineEncryptBundle\Subscribers\DoctrineEncryptSubscriber
         arguments: ["@annotation_reader", "%phil_e_taylor_doctrine_encrypt.encryptor_class_name%", "%phil_e_taylor_doctrine_encrypt.keys%"]
         tags:
-            -  { name: doctrine.event_subscriber }
+            - { name: doctrine.event_subscriber }
+            - { name: kernel.reset, method: "reset" }
 
     Philetaylor\DoctrineEncryptBundle\Subscribers\DoctrineEncryptSubscriber:
         alias: phil_e_taylor_doctrine_encrypt.orm_subscriber
